# agentic-web-scrapper

./: .gitignore  .replit  README.md  ai_agent.py  config.py  example_usage.py  main.py  pyproject.toml  scraped_medium_com_1749286004.json  scraped_medium_com_1749297294.json  scraped_sapi-demo_tensai_run_1749286727.json  scraped_sapi-demo_tensai_run_1749286779.json  scraped_stg-secureapi_azurewebsites_net_1749286874.json  scraped_www_cricbuzz_com_1749286123.json  scraped_x_com_1749287301.json  scraper_engine.py  setup.py
agentic_scraper/: __init__.py  cli.py
agentic_scraper/core/: __init__.py  agent_coordinator.py  config_manager.py  scraper_engine.py
agentic_scraper/plugins/: __init__.py  base_plugin.py
agentic_scraper/utils/: logger.py
